# python_project_starter

./: Makefile  README.md  pyproject.toml
python/tests/: test_all.py
rust/: Cargo.toml  lib.rs
rust/src/: lib.rs
src/project_starter/: __main__.py  extension.pyi
tests/: test_all.py
