[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
authors = [{"name" = "Alexandre Poulin"}]
description = "WRITE A DESCRIPTION"
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "$MYPROJECT"
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "pydantic~=2.0",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
  "maturin",
]

[project.scripts]
$MYPROJECT = "$MYPROJECT.__main__:main"

[tool.ruff]
exclude = [".venv"]
line-length = 120


[tool.maturin]
python-source = "src"
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
module-name = "$MYPROJECT.extension"

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [
]